[package]
name = "cronify"
version = "1.0.0"
edition = "2024"
description = "A tool to convert natural language time expressions into cron syntax."
readme = "README.md"
license = "MIT"
license_file = "LICENSE"
repository = "https://www.github.com/mikeharty/cronify"
categories = ["command-line-utilities", "parser-implementations", "text-processing", "date-and-time"]
keywords = ["cron", "nlp", "time", "parser", "scheduling"]

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
once_cell = "1.19"
